welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: 'case' expected but identifier found.
mesage "R" => droite();
^BDR2:6: error: '}' expected but ';' found.
mesage "R" => droite();
                      ^BDR2:9: error: ';' expected but string literal found.
message "L" =>
        ^BDR2:12: error: ';' expected but string literal found.
message "I"=>
        ^BDR2:16: error: ';' expected but string literal found.
message "A"=>
        ^BDR2:18: error: ';' expected but string literal found.
message "B"=>
        ^BDR2:21: error: ';' expected but string literal found.
message "C"=>
        ^BDR2:25: error: ';' expected but string literal found.
message "Z"=>
        ^BDR2:27: error: ';' expected but string literal found.
message "Y"=>
        ^BDR2:30: error: ';' expected but string literal found.
message "X"=>recule();
        ^BDR2:38: error: eof expected but '}' found.
}
^