welcome.lessons.welcome.bdr.BDR2.scala.code
var message=litMessage()
while (litMessage) {

message match {
mesage "R" => droite();
		avance()
	
message "L" =>
		gauche() 
		avance();
message "I"=>
		droite();
		droite();
		avance()
message "A"=>
		avance()
message "B"=>
		avance();
		avance();
message "C"=>
		avance();
		avance();
		avance()
message "Z"=>
		recule()
message "Y"=>
		recule();
		recule();
message "X"=>recule();
		recule();
		recule();
}
message=litMessage()
}